# cc-statusline

./: CHANGELOG.md  Cargo.toml  README.md  config.example.toml  config.schema.json
.github/workflows/: ci.yml  release.yml  tag.yml
src/: cache.rs  component.rs  components.rs  config.rs  focus.rs  git.rs  github.rs  glyphs.rs  input.rs  layout.rs  lib.rs  main.rs  pct.rs  quota.rs  recent_prs.rs  refresh.rs  render.rs  state.rs  template.rs  transcript.rs  vlen.rs
