[package]
name = "cc-statusline"
version = "0.1.4"
edition = "2024"
rust-version = "1.89"
description = "Claude Code statusline — Rust port of the bash original"
license = "MIT"
repository = "https://github.com/NorthIsUp/cc-statusline"

[[bin]]
name = "cc-statusline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
