[package]
name = "cc-statusline"
version = "0.1.14"
edition = "2024"
rust-version = "1.89"
description = "Claude Code statusline — Rust port of the bash original"
license = "MIT"
repository = "https://github.com/NorthIsUp/cc-statusline"

[lib]
name = "cc_statusline"
path = "src/lib.rs"

[[bin]]
name = "cc-statusline"
path = "src/main.rs"

[[bin]]
name = "gen_schema"
path = "src/bin/gen_schema.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
schemars = { version = "0.8", features = ["derive"] }
libc = "0.2.186"
git2 = "0.21.0"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSAppleScript", "NSAppleEventDescriptor", "NSString", "NSDictionary", "NSValue"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWorkspace", "NSRunningApplication"] }
ureq = { version = "3.3.0", default-features = false, features = ["json", "native-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
